[package]
name = "url-protocol-view"
default-run = "url-protocol-view"
version = "0.1.0"
description = "URLProtocolView is a simple utility that displays URL Protocol Handler that are currently installed on your Windows system"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
which = "4.2.2"
anyhow = "1.0"
dirs = "4.0.0"
open = "3.0.3"
log = "0.4.14"
dunce = "1.0.2"
serde_json = "1.0"
serde_yaml = "0.9.13"
auto-launch = "0.4.0"
port_scanner = "0.1.5"
parking_lot = "0.12.0"
window-shadows = "0.1"
window-vibrancy = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tauri = { version = "1.0.0-rc.14", features = ["process-all", "shell-all", "system-tray", "updater", "window-all"] }

[target.'cfg(windows)'.dependencies]
runas = "0.2.1"
deelevate = "0.2.0"
winreg = { version = "0.10", features = ["transactions"] }
windows-sys = { version = "0.36", features = ["Win32_System_LibraryLoader", "Win32_System_SystemInformation"] }

[features]
default = ["custom-protocol", "tauri/ayatana-tray"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
strip = true
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
